--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,10 @@ jobs:
             goos: darwin
             goarch: arm64
             suffix: darwin-arm64
+          - os: ubuntu-latest
+            goos: linux
+            goarch: amd64
+            suffix: linux-amd64
 
     runs-on: ${{ matrix.os }}
 
@@ -32,10 +36,6 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version: '1.23'
-
-    - name: Install SQLite
-      run: |
-        brew install sqlite3
 
     - name: Build CLI
       run: |
@@ -69,6 +69,7 @@ jobs:
         files: |
           clipnest-darwin-amd64/*
           clipnest-darwin-arm64/*
+          clipnest-linux-amd64/*
         draft: false
         prerelease: false
         generate_release_notes: true
