--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,24 +9,8 @@ permissions:
   contents: write
 
 jobs:
-  build:
-    strategy:
-      matrix:
-        include:
-          - os: macos-latest
-            goos: darwin
-            goarch: amd64
-            suffix: darwin-amd64
-          - os: macos-latest
-            goos: darwin
-            goarch: arm64
-            suffix: darwin-arm64
-          - os: ubuntu-latest
-            goos: linux
-            goarch: amd64
-            suffix: linux-amd64
-
-    runs-on: ${{ matrix.os }}
+  release:
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
@@ -37,39 +21,31 @@ jobs:
       with:
         go-version: '1.23'
 
-    - name: Build CLI
+    - name: Build macOS amd64
       run: |
-        GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -v -o clipnest-${{ matrix.suffix }} ./cmd/clipnest
+        GOOS=darwin GOARCH=amd64 go build -v -o clipnest-darwin-amd64 ./cmd/clipnest
+        GOOS=darwin GOARCH=amd64 go build -v -o clipnestd-darwin-amd64 ./cmd/clipnestd
 
-    - name: Build Daemon
+    - name: Build macOS arm64
       run: |
-        GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -v -o clipnestd-${{ matrix.suffix }} ./cmd/clipnestd
+        GOOS=darwin GOARCH=arm64 go build -v -o clipnest-darwin-arm64 ./cmd/clipnest
+        GOOS=darwin GOARCH=arm64 go build -v -o clipnestd-darwin-arm64 ./cmd/clipnestd
 
-    - name: Upload Binaries
-      uses: actions/upload-artifact@v4
-      with:
-        name: clipnest-${{ matrix.suffix }}
-        path: |
-          clipnest-${{ matrix.suffix }}
-          clipnestd-${{ matrix.suffix }}
-
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Download Artifacts
-      uses: actions/download-artifact@v4
-      with:
-        path: .
+    - name: Build Linux amd64
+      run: |
+        GOOS=linux GOARCH=amd64 go build -v -o clipnest-linux-amd64 ./cmd/clipnest
+        GOOS=linux GOARCH=amd64 go build -v -o clipnestd-linux-amd64 ./cmd/clipnestd
 
     - name: Create Release
       uses: softprops/action-gh-release@v2
       with:
         files: |
-          clipnest-darwin-amd64/*
-          clipnest-darwin-arm64/*
-          clipnest-linux-amd64/*
+          clipnest-darwin-amd64
+          clipnestd-darwin-amd64
+          clipnest-darwin-arm64
+          clipnestd-darwin-arm64
+          clipnest-linux-amd64
+          clipnestd-linux-amd64
         draft: false
         prerelease: false
         generate_release_notes: true
