--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,15 @@ jobs:
       with:
         go-version: '1.23'
 
+    - name: Install Go dependencies
+      run: |
+        go install github.com/atotto/clipboard@latest
+
+    - name: Build Linux
+      run: |
+        GOOS=linux GOARCH=amd64 go build -v -o clipnest-linux-amd64 ./cmd/clipnest
+        GOOS=linux GOARCH=amd64 go build -v -o clipnestd-linux-amd64 ./cmd/clipnestd
+
     - name: Build macOS amd64
       run: |
         GOOS=darwin GOARCH=amd64 go build -v -o clipnest-darwin-amd64 ./cmd/clipnest
@@ -31,21 +40,19 @@ jobs:
         GOOS=darwin GOARCH=arm64 go build -v -o clipnest-darwin-arm64 ./cmd/clipnest
         GOOS=darwin GOARCH=arm64 go build -v -o clipnestd-darwin-arm64 ./cmd/clipnestd
 
-    - name: Build Linux amd64
-      run: |
-        GOOS=linux GOARCH=amd64 go build -v -o clipnest-linux-amd64 ./cmd/clipnest
-        GOOS=linux GOARCH=amd64 go build -v -o clipnestd-linux-amd64 ./cmd/clipnestd
+    - name: List binaries
+      run: ls -lh
 
     - name: Create Release
       uses: softprops/action-gh-release@v2
       with:
         files: |
+          clipnest-linux-amd64
+          clipnestd-linux-amd64
           clipnest-darwin-amd64
           clipnestd-darwin-amd64
           clipnest-darwin-arm64
           clipnestd-darwin-arm64
-          clipnest-linux-amd64
-          clipnestd-linux-amd64
         draft: false
         prerelease: false
         generate_release_notes: true
