feat(ui, cli, pipeline): version 0.1.0 of the app is ready

--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,11 @@ Thumbs.db
 # Logs
 *.log
 
+# Build output
+bin/
+app/ClipNest/.build/
+app/ClipNest/build/
+.swiftpm/
+
 # Temporary files
 /tmp/
