--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,23 +1,41 @@
+version: "2"
 run:
   go: "1.23"
-
 linters:
+  enable:
+    - misspell
+    - revive
+  settings:
+    revive:
+      rules:
+        - name: exported
+          disabled: true
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    rules:
+      - linters:
+          - errcheck
+        path: _test\.go
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
   enable:
     - gofmt
     - goimports
-    - misspell
-    - revive
-
-linters-settings:
-  goimports:
-    local-prefixes: clipnest
-  revive:
-    rules:
-      - name: exported
-        disabled: true
-
-issues:
-  exclude-rules:
-    - path: _test\.go
-      linters:
-        - errcheck
+  settings:
+    goimports:
+      local-prefixes:
+        - clipnest
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
