--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,11 @@ jobs:
           tar czf "clipnest-${os}-${arch}.tar.gz" "clipnest-${os}-${arch}" "clipnestd-${os}-${arch}"
         done
 
+    - name: Set up Swift
+      uses: swift-actions/setup-swift@v3
+      with:
+        swift-version: "6.2"
+
     - name: Build Swift app
       run: |
         make app
