--- a/app/ClipNest/Resources/Info.plist
+++ b/app/ClipNest/Resources/Info.plist
@@ -18,6 +18,8 @@
     <string>APPL</string>
     <key>LSUIElement</key>
     <true/>
+    <key>CFBundleIconFile</key>
+    <string>AppIcon</string>
     <key>LSMinimumSystemVersion</key>
     <string>15.0</string>
 </dict>
